Fixes mobile page layout extra margins.

--- a/scss/_bits/_body.scss
+++ b/scss/_bits/_body.scss
@@ -1,12 +1,14 @@
 html {
-	align-items: center;
 	background-color: var(--gray-20);
 	display: flex;
 	justify-content: center;
+
+	@media (min-width: $harbor) {
+		align-items: center;
+	}
 }
 
 body {
-	align-items: center;
 	background-color: var(--white);
 	display: flex;
 	flex-direction: column;
@@ -16,7 +18,7 @@ body {
 	margin: 0;
 	padding: 0;
 
-	@media (min-width: $bay) {
+	@media (min-width: $harbor) {
 		border-left: 1px solid var(--gray-20);
 		border-right: 1px solid var(--gray-20);
 	}
